--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,17 @@ flutter:
     - assets/images/view.png
     - assets/images/views.png
     - assets/images/cart.png
+    - assets/images/product1.png
+    - assets/images/add_cart_blue.png
+    - assets/images/add_cart_red.png
+    - assets/images/address_ico.png
+    - assets/images/date.png
+    - assets/images/edit.png
+    - assets/images/minus_cart.png
+    - assets/images/mobile.png
+    - assets/images/remove_cart.png
+    - assets/images/time.png
+    - assets/images/wishlist.png
     - assets/images/home.png
     - assets/images/favorite.png
     - assets/images/favorate.png
