login function added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,10 +27,14 @@ dependencies:
 
 
   cupertino_icons: ^1.0.2
+  http: ^0.12.0+4
+  http_parser: ^3.1.4
+  fluttertoast: ^7.0.4
+  shared_preferences: ^0.5.10
   carousel_slider: ^3.0.0
   convex_bottom_bar: ^3.0.0
   flutter_html: ^0.8.2
-  file_picker: ^3.0.1
+#  file_picker: ^3.0.1
   provider: ^4.3.2+2
   circular_countdown_timer: ^0.2.0
 
